# image-prompt-generator

./: .gitignore  Cargo.toml  README.md  build.bat  build.rs  run.bat  setup.bat
assets/: app.manifest
config/: config.txt
dev/references/: nano_banana_cheatsheet_tone_composition_lighting.md
rust/src/: config_store.rs  history_store.rs  lib.rs  main.rs  main_ui_html.rs  path_utils.rs  renderer.rs  server.rs  windows_app.rs
